[project]
name = "example_package_Jeminana"
version = "0.0.1"
authors = [
  { name="NAjmi", email="sadenajmi@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Jeminana/sampleproject"
Issues = "https://github.com/Jeminana/sampleproject/issues"
